--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,8 @@ board = lolin32
 framework = arduino
 upload_speed = 115200
 monitor_speed = 115200
+build_flags =
+    -fpermissive
 
 lib_deps =
     Adafruit NeoPixel 
